2009-02-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c (gst_sphinx_sink_render):
	
	Fixes return to avoid blocking.

2009-01-28  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/action.c (voice_control_action_process_result):
	* src/action.h:
	* src/gstsphinxsink.c (gst_sphinx_sink_class_init),
	(gst_sphinx_sink_send_message), (gst_sphinx_sink_calibrate_chunk),
	(gst_sphinx_sink_process_chunk), (gst_sphinx_sink_render),
	(gst_sphinx_sink_set_fsg), (gst_sphinx_sink_running):
	* src/gstsphinxsink.h:
	* src/voice-control.c (on_sink_initialization),
	(on_sink_after_initialization), (on_sink_calibration),
	(on_sink_listening), (on_sink_ready), (process_action),
	(show_notification), (on_sink_message), (voice_control_ui_changed),
	(display_about_dialog), (voice_control_pipeline_bus_callback),
	(voice_control_applet_create_pipeline), (main):
	
	Initial rework to make use of gstreamer bus and drop
	multithreading.

2009-01-28  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* README:
	
	Updated build instructions.

2008-08-06  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.h:
	
	Obsolete include removed.

2008-08-01  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* data/Makefile.am:
	
	Use $(libexecdir) to fix bug #545742.

2008-07-31  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	
	Include AM_MAINTAINER_MODE to fix bug #547735.

2008-05-27  Andrés Estévez Costas  <aecostas@gmail.com>

	* README:
	* src/action.c (do_action), (voice_control_action_process_result):
	
	Fixes bug with mouse direction, updated README and fixes
	action order comparision.

2008-05-23  Andrés Estévez Costas  <aecostas@gmail.com>

	* src/action.c (do_action): Check gconf for
	default terminal and browser.

2008-05-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/Makefile.am:
	* lang/desktop-control-es.dict:

	Added spanish dictionary by Mauricio Henriquez <mhenriquezs@terra.cl>.

2008-05-06  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
